# tsp-solvers

./: .env  .env.swp  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  bench_concorde.sh  bench_cuopt.sh  bench_gurobi.sh  convert.py  error_log.txt  gpu_run.bash  gurobi_provided_script.py  main.py  paper_code_explanation.md  pyproject.toml  readme.md  sweep_job.sh  test.sh  utsp_solver.sh
.github/workflows/: lint.yml
data/: buil_dataset.py  build_dataset.py
data/tsp_dataset/10/: zurich_10_0.tsp  zurich_10_1.tsp  zurich_10_10.tsp  zurich_10_11.tsp  zurich_10_12.tsp  zurich_10_13.tsp  zurich_10_14.tsp  zurich_10_15.tsp  zurich_10_16.tsp  zurich_10_17.tsp  zurich_10_18.tsp  zurich_10_19.tsp  zurich_10_2.tsp  zurich_10_20.tsp  zurich_10_21.tsp  zurich_10_22.tsp  zurich_10_23.tsp  zurich_10_24.tsp  zurich_10_25.tsp  zurich_10_26.tsp  zurich_10_27.tsp  zurich_10_28.tsp  zurich_10_29.tsp  zurich_10_3.tsp  zurich_10_4.tsp  zurich_10_5.tsp  zurich_10_6.tsp  zurich_10_7.tsp  zurich_10_8.tsp  zurich_10_9.tsp
data/tsp_dataset/100/: zurich_100_0.tsp  zurich_100_1.tsp  zurich_100_10.tsp  zurich_100_11.tsp  zurich_100_12.tsp  zurich_100_13.tsp  zurich_100_14.tsp  zurich_100_15.tsp  zurich_100_16.tsp  zurich_100_17.tsp  zurich_100_18.tsp  zurich_100_19.tsp  zurich_100_2.tsp  zurich_100_20.tsp  zurich_100_21.tsp  zurich_100_22.tsp  zurich_100_23.tsp  (+13 more)
neural/: COMPARISON.md
neural/config/: loader.py  sweep.yaml  sweep_100.yaml  sweep_1000.yaml  sweep_200.yaml  sweep_25.yaml  sweep_50.yaml  sweep_500.yaml
neural/data/: dataloader.py
neural/local_search/: lkh3_wrapper.py  mcts_wrapper.py
neural/model/: gnn.py  loss.py  reference.py
neural/scripts/: inference.py  train.py
results/: summary.csv
results/cuOpt/: 20260302_171427_zurich_10_0_cuOpt_10.json  20260302_171702_zurich_10_0_cuOpt_10.json  20260302_180742_zurich_200_0_cuOpt_200.json  20260302_182557_zurich_200_0_cuOpt_200.json  20260302_184535_zurich_2000_0_cuOpt_2000.json
results/gurobi/: 20260301_141401_zurich_10_0_gurobi_10.json
saved_models/: best.pt
saved_models/100/: best.pt
saved_models/1000/: best.pt
saved_models/25/: best.pt
scripts/: convert.py  gpu_run.bash
src/: data_generator.py  logger.py  main.py
src/benchmark/: run_benchmark.py
src/data_handling/: build_dataset.py  results_loader.py  tsplib_extension.py
src/solvers/: concorde_solver.py  cuopt.py  cuopt_solver.py  gurobi_solver.py  neural_solver.py  solver_base.py  utsp_mcts_only_solver.py  utsp_neural_solver.py  utsp_solver.py
src/visualization/: plot_adjacency_matrix.py  viz_benchmark.py  viz_benchmark_results.py  viz_plain.py  viz_streetmap.py
util_scripts/: convert.py  dataloader.py  gpu_run.bash  prepare_data_for_gnn_training.py
(+1098 files in other folders)
