[project]
name = "tsp-solvers"
version = "0.1.0"
description = "Solve TSP Problems with popular solvers"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "argparse>=1.4.0",
    "cuopt-server-cu12==26.2.0",
    "cuopt-sh-client==26.2.0",
    "gurobipy>=13.0.1",
    "joblib>=1.5.3",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "networkx>=2.8.8",
    "numpy>=1.24,<2.3",
    "nvidia-cuda-runtime-cu12==12.6.*",
    "osmnx>=2.1.0",
    "pandas>=2.0,<2.4",
    "python-dotenv>=1.2.1",
    "tqdm>=4.67.3",
    "tsplib95>=0.7.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pyright>=1.1",
    "ruff==0.15.4",
    "pre-commit>=3.0",
]


[tool.uv]
# This tells uv to only resolve for Linux, avoiding the "win32" error
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"
explicit = false  # Allows uv to search here and PyPI simultaneously

# [tool.pytest.ini_options]
# testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes (real bugs: undefined names, unused imports)
    "I",  # isort (import sorting)
    "UP", # pyupgrade (modernize syntax for Python 3.11)
    "B",  # flake8-bugbear (common gotchas, e.g. mutable default args)
    "C4", # flake8-comprehensions (cleaner list/dict comprehensions)
]
ignore = [
    "E501", # line too long — handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "B011", # assert False is fine in tests
]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
